src/components/Keyboard/keyboard.css
.keyboard {
  display: flex;
  justify-content: center;
  margin-bottom: var(--size-5xl);
  border-bottom: 1px solid var(--color-header-border);
  padding-bottom: var(--size-2xs);
}

.keyboard__inner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--size-2xs);
}

.keyboard__row {
  display: flex;
  justify-content: center;
}

.keyboard__key {
  margin: var(--size-2xs);
  width: var(--size-6xl);
  height: var(--size-7xl);
  background: var(--color-button);
  display: inline-flex;
  border-radius: 6px;
  line-height: var(--size-7xl);
  text-transform: capitalize;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  font-size: var(--size-3xl);
  transition: all 0.3s ease-in;
  color: var(--color-keyboard-text);
}

.keyboard__key--Backspace,
.keyboard__key--Enter {
  width: var(--size-10xl);
  text-transform: none;
}

/* sm */
@media (max-width: 640px) {
  .keyboard {
    margin-bottom: var(--size-3xl);
  }
  .keyboard__key {
    width: var(--size-5xl);
    height: var(--size-6xl);
    line-height: var(--size-6xl);
    font-size: var(--size-3xl);
    margin: 0.4rem;
  }

  .keyboard__key--Backspace,
  .keyboard__key--Enter {
    width: var(--size-9xl);
    text-transform: none;
  }
}

/* xs */
@media (max-width: 475px) {
  .keyboard__key {
    width: var(--size-4xl);
    height: var(--size-5xl);
    line-height: var(--size-5xl);
    font-size: var(--size-2xl);
    margin: 0.2rem;
  }

  .keyboard__key--Backspace,
  .keyboard__key--Enter {
    width: var(--size-7xl);
    text-transform: none;
  }
}

.keyboard__key--correct {
  background: var(--color-correct);
}

.keyboard__key--present {
  background: var(--color-present);
}

.keyboard__key--absent {
  background: var(--color-absent);
}

